Fix conflix in order item